refactoring and fixed left shift in chronicle

--- a/medieval-angular/src/app/app.component.css
+++ b/medieval-angular/src/app/app.component.css
@@ -3,7 +3,7 @@
   display: flex;
   /* or inline-flex */
   justify-content: space-between;
-  height: -webkit-fill-available;
+  height: 100%;
 }
 
 .item-header {
@@ -148,8 +148,8 @@
 
 .middle-container {
   text-align: center;
-  width: -webkit-fill-available;
-  height: -webkit-fill-available;
+  width: 100%;
+  height: 100%;
   /* what */
 }
 
